// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > Snapshots > matches all sizes snapshot 1`] = `
<div
  data-testid="sizes-container"
>
  <div
    class="badge badge--default badge--sm"
  >
    Small
  </div>
  <div
    class="badge badge--default badge--default"
  >
    Default
  </div>
  <div
    class="badge badge--default badge--lg"
  >
    Large
  </div>
</div>
`;

exports[`Badge > Snapshots > matches all variants snapshot 1`] = `
<div
  data-testid="variants-container"
>
  <div
    class="badge badge--default badge--default"
  >
    Default
  </div>
  <div
    class="badge badge--destructive badge--default"
  >
    Destructive
  </div>
  <div
    class="badge badge--outline badge--default"
  >
    Outline
  </div>
  <div
    class="badge badge--secondary badge--default"
  >
    Secondary
  </div>
</div>
`;

exports[`Badge > Snapshots > matches default snapshot 1`] = `
<div
  class="badge badge--default badge--default"
>
  Default
</div>
`;

exports[`Badge > Snapshots > matches dot indicator snapshot 1`] = `
<div
  class="badge badge--default badge--default badge--dot"
>
  <span
    aria-hidden="true"
    class="badge__dot"
  />
  With Dot
</div>
`;

exports[`Badge > Snapshots > matches removable state snapshot 1`] = `
<div
  class="badge badge--default badge--default"
>
  Removable
  <button
    aria-label="Remove badge"
    class="badge__remove-button"
    type="button"
  >
    <svg
      class="badge__remove-icon"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M6 18L18 6M6 6l12 12"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </button>
</div>
`;
